--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,7 @@ header .list-items{
 .list-items li a {
     color: #fff;
     margin: 10px;
-    font-size: small;
+    font-size: smaller;
     text-align: center;
 }
 
@@ -66,4 +66,47 @@ header .menu{
     color: #190C65;
     font-size: 40px;
     margin-bottom: 10px;
+}
+
+.text-presentation p{
+    margin-bottom: 10px;
+}
+
+.text-presentation a{
+    background-color: #190C65;
+    color: #fff;
+    text-align: center;
+    border-radius: 50px;
+    display: block;
+    width: 330px;
+    text-decoration: none;
+    line-height: 3.0;
+}
+
+#quem-somos{
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#quem-somos h2{
+    font-size: 35px;
+    color: #190C65;
+    display: flex;
+    margin-bottom: 20px;
+}
+
+#quem-somos h2::before{
+    content: "";
+    height: 50px;
+    width: 5px;
+    margin-right: 5px;
+    background-color: #190C65;
+    position: relative;
+}
+
+#quem-somos p{
+    margin-bottom: 10px;
+    width: 90%;
+    font-size: smaller;
 }
