--- a/style/style.css
+++ b/style/style.css
@@ -16,12 +16,16 @@ ul li a{
     text-decoration: none;
 }
 
+div img{
+    display: block;
+    width: 100%;
+}
+
 .flex-container{
     display: flex;
     max-width: 992px;
     margin: auto;
     width: 100%;
-    align-items: center;
 }
 
 header{
@@ -109,4 +113,55 @@ header .menu{
     margin-bottom: 10px;
     width: 90%;
     font-size: smaller;
+}
+
+#quem-somos img{
+    min-width: 450px;
+}
+
+.container-externo{
+    background-color: #190C65;
+    width: 100%;    
+}
+
+#servicos{
+    flex-direction: column;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+
+#servicos h2{
+    color: #fff;
+    font-size: 35px;
+    margin-bottom: 30px;
+}
+
+.list-servicos{
+    display: flex;
+    justify-content: space-around;
+}
+
+.list-servicos .item-servicos{
+    text-align: center;
+}
+
+.item-servicos a{
+    width: 220px;
+    background-color: #fff;
+    border-radius: 30px;
+    height: 50px;
+    text-align: center;
+    margin-top: 20px;
+    line-height: 50px;
+    padding: 5px 0;
+    text-decoration: none;
+    font-size: 15px;
+    color: #190C65;
+    font-weight: bold;
+}
+
+
+.item-servicos img{
+    display: flex;
+    margin-bottom: 50px;
 }
